# league-mod

./: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  release-plz.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  publish-winget.yml  release-ltk-manager.yml  release-plz.yml  release.yml
.husky/: pre-commit
crates/fantome/: Cargo.toml
crates/fantome/src/: lib.rs
crates/league-mod/: CHANGELOG.md  Cargo.toml
crates/league-mod/src/: errors.rs  main.rs
crates/league-mod/src/commands/: config.rs  extract.rs  info.rs  init.rs  mod.rs  pack.rs
crates/league-mod/src/transformers/: mod.rs
crates/league-mod/src/utils/: config.rs  league_path.rs  mod.rs  modpkg.rs  update.rs
crates/league-modpkg/: Cargo.toml
crates/league-modpkg/src/: builder.rs  chunk.rs  error.rs  lib.rs  read.rs  thumbnail.rs  utils.rs
crates/ltk-manager/: DESIGN.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js
crates/ltk-manager/.cursor/rules/: error-handling.mdc
crates/ltk-manager/src/: main.tsx
crates/ltk-manager/src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
crates/ltk-manager/src-tauri/src/: commands.rs  error.rs  main.rs  state.rs
crates/ltk-manager/src-tauri/src/commands/: mod.rs  mods.rs  shell.rs
crates/ltk-manager/src-tauri/src/mods/: library.rs  mod.rs
crates/ltk-manager/src-tauri/src/overlay/: mod.rs  modpkg_content.rs
crates/ltk-manager/src/components/: Button.tsx  Checkbox.tsx  FormField.tsx  ModCard.tsx  Progress.tsx  Sidebar.tsx  Tabs.tsx  Toast.tsx  ToastProvider.tsx  Tooltip.tsx  index.ts
crates/ltk-manager/src/lib/: query.ts  tauri.ts
crates/ltk-manager/src/modules/patcher/components/: StatusBar.tsx
crates/ltk-manager/src/modules/settings/api/: index.ts  keys.ts  useAppInfo.ts  useCheckSetupRequired.ts  useSaveSettings.ts  useSettings.ts  useTheme.ts
crates/ltk-manager/src/modules/shell/components/: TitleBar.tsx
crates/ltk-manager/src/modules/updater/components/: UpdateNotification.tsx
crates/ltk-manager/src/modules/updater/hooks/: index.ts  useUpdateCheck.ts
crates/ltk-manager/src/pages/: Library.tsx  Settings.tsx
crates/ltk-manager/src/routes/: __root.tsx
crates/ltk-manager/src/stores/: index.ts  themeStore.ts
crates/ltk-manager/src/styles/: app.css
crates/ltk-manager/src/utils/: errors.ts  index.ts  query.ts  result.ts
crates/ltk_fantome/: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
crates/ltk_fantome/src/: error.rs  extractor.rs  hashtable.rs  lib.rs
crates/ltk_mod_core/: CHANGELOG.md  Cargo.toml
crates/ltk_mod_core/src/: league_path.rs  lib.rs
crates/ltk_mod_lib/: Cargo.toml
crates/ltk_mod_lib/src/: error.rs  index.rs  install.rs  lib.rs  lock.rs  overlay.rs  profile.rs  progress.rs  query.rs
crates/ltk_mod_lib/tests/: integration.rs
crates/ltk_mod_project/: CHANGELOG.md  Cargo.toml
crates/ltk_mod_project/src/: lib.rs
crates/ltk_mod_project/test-data/: mod.config.json  mod.config.toml
crates/ltk_modpkg/: CHANGELOG.md  Cargo.toml  MSGPACK_COMPATIBILITY.md  README.md
crates/ltk_modpkg/src/: builder.rs  chunk.rs  decoder.rs  error.rs  extractor.rs  lib.rs  license.rs  metadata.rs  project.rs  read.rs  readme.rs  thumbnail.rs  utils.rs
crates/ltk_modpkg/src/project/: mod.rs  packer.rs  tests.rs  thumbnail.rs
crates/ltk_overlay/: CHANGELOG.md  Cargo.toml  README.md
crates/ltk_overlay/docs/: LAZY_OVERRIDE_LOADING.md
crates/ltk_overlay/src/: builder.rs  content.rs  error.rs  fantome_content.rs  game_index.rs  lib.rs  linked_bins.rs  meta_cache.rs  modpkg_content.rs  state.rs  strings.rs  strings_integration_tests.rs  utils.rs  wad_builder.rs
crates/ltk_overlay/src/builder/: metadata.rs  mod.rs  resolve.rs
crates/ltk_pki/: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
crates/ltk_pki/src/: consts.rs  lib.rs  tests.rs
crates/ltk_pki/src/io/: mod.rs  modsig.rs  wadtoc.rs
crates/ltk_pki/src/pki/: mod.rs  sign.rs  util.rs  verify.rs
crates/ltk_pki/src/tests/: data.rs  generate_test_pem.sh
crates/mod-project/: Cargo.toml
docs/: LTK_MANAGER_MIGRATION_PLAN.md  overlay-builder-design.md  overlay-implementation-plan.md  workshop-ux-improvements.md
manifests/LeagueToolkit/LeagueMod/0.1.1/: LeagueToolkit.LeagueMod.installer.yaml  LeagueToolkit.LeagueMod.locale.en-US.yaml
scripts/: install-league-mod.ps1
winget/: README.md  update-manifest.ps1  update-manifest.sh
winget/manifests/LeagueToolkit/LeagueMod/0.1.0/: LeagueToolkit.LeagueMod.installer.yaml  LeagueToolkit.LeagueMod.locale.en-US.yaml  LeagueToolkit.LeagueMod.yaml
winget/manifests/LeagueToolkit/LeagueMod/0.1.1/: LeagueToolkit.LeagueMod.yaml
