[workspace]
resolver = "2"

members = [
    "crates/league-mod",
    "crates/ltk_fantome",
    "crates/ltk_mod_core",
    "crates/ltk_modpkg",
    "crates/ltk_mod_project",
    "crates/ltk_overlay",
    "crates/ltk_pki",
]

[workspace.dependencies]
camino = "1.1"
ltk_wad = "0.2.13"
sysinfo = "0.32"
