[package]
name = "league-mod"
version = "0.2.0"
edition = "2021"
description = "A comprehensive toolkit for creating, managing, and distributing League of Legends mods"
license = "AGPL-3.0-only"
repository = "https://github.com/LeagueToolkit/league-mod"
homepage = "https://github.com/LeagueToolkit/league-mod"
documentation = "https://github.com/LeagueToolkit/league-mod/wiki"
readme = "../../README.md"
keywords = ["league-of-legends", "modding", "gaming", "cli", "toolkit"]
categories = ["command-line-utilities", "game-development"]
authors = ["LeagueToolkit"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2.0"
toml = "0.8.19"
ltk_mod_project = { version = "0.1.2", path = "../ltk_mod_project" }
regex = "1.11.1"
serde_json = "1.0"
colored = "2"
inquire = "0.7.5"
slug = "0.1.6"
ltk_modpkg = { version = "0.1.3", path = "../ltk_modpkg" }
ltk_fantome = { version = "0.1.2", path = "../ltk_fantome" }
glob = "0.3.2"
semver = "1.0.25"
binrw = "0.14.1"
image = { version = "0.25", default-features = false, features = [
    "webp",
    "png",
    "jpeg",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
