[package]
name = "ltk_fantome"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Helper library for working with League of Legends mods in the legacy Fantome format"
repository = "https://github.com/LeagueToolkit/league-mod"
homepage = "https://github.com/LeagueToolkit/league-mod"
documentation = "https://github.com/LeagueToolkit/league-mod/wiki"
readme = "../../README.md"
keywords = ["league-of-legends", "modding", "gaming", "toolkit"]
categories = ["game-development"]
authors = ["LeagueToolkit"]

[dependencies]
zip = "2.2.0"
image = "0.25.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
walkdir = "2.5.0"
thiserror = "2.0"
slug = "0.1"
camino = "1.1"
itertools = "0.14"
ltk_mod_project = { version = "0.1.3", path = "../ltk_mod_project" }
ltk_wad = "0.2.6"

[dev-dependencies]
tempfile = "3.15"
