[package]
name = "ltk_mod_project"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Types and helpers for League Toolkit mod project definitions"
repository = "https://github.com/LeagueToolkit/league-mod"
homepage = "https://github.com/LeagueToolkit/league-mod"
documentation = "https://github.com/LeagueToolkit/league-mod/wiki"
readme = "../../README.md"
keywords = ["league-of-legends", "modding", "gaming", "toolkit"]
categories = ["game-development"]
authors = ["LeagueToolkit"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
serde_json = "1.0"
