[package]
name = "ltk_modpkg"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "League Toolkit mod package (.modpkg) reader/writer and utilities"
repository = "https://github.com/LeagueToolkit/league-mod"
homepage = "https://github.com/LeagueToolkit/league-mod"
documentation = "https://github.com/LeagueToolkit/league-mod/wiki"
readme = "../../README.md"
keywords = ["league-of-legends", "modding", "gaming", "toolkit"]
categories = ["game-development"]
authors = ["LeagueToolkit"]

[dependencies]
thiserror = "1.0.60"
byteorder = "1.5.0"
ltk_io_ext = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
binrw = "0.14.1"
itertools = "0.14.0"
proptest = "1.6.0"
zstd = "0.13"
tempfile = "3.17.1"
semver = { version = "1.0.27", features = ["serde"] }
glob = "0.3"
image = { version = "0.25", default-features = false, features = [
    "webp",
    "png",
    "jpeg",
    "gif",
    "bmp",
    "tiff",
    "ico",
] }
webp = "0.3"
webp-animation = "0.9"

camino = { workspace = true }

# Optional: for packing from mod projects
ltk_mod_project = { version = "0.1.4", path = "../ltk_mod_project", optional = true }

[features]
default = []
project = ["ltk_mod_project"]

[dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh3", "xxh64"]

[dev-dependencies]
proptest-derive = "0.5.1"
