[package]
name = "ltk_pki"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Support code for verifying League Toolkit mod signatures"
repository = "https://github.com/LeagueToolkit/league-mod"
homepage = "https://github.com/LeagueToolkit/league-mod"
documentation = "https://github.com/LeagueToolkit/league-mod/wiki"
readme = "../../README.md"

[dependencies]
sha2 = { version = "0.10.9", features = ["oid"] }
binrw = "0.14.1"
thiserror = "2.0.3"
rsa = { version = "0.9", features = ["sha2"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
cms = { version = "0.2.3", features = ["std", "alloc", "pem", "builder"] }
der = { version = "0.7", features = ["derive"] }
pem = "3.0.5"
miette = "7.6.0"
rustls-webpki = { version = "0.103.3", features = ["std", "ring", "alloc" ] }
rustls-pki-types = "1.12.0"
ring = "0.17.14"
p12 = "0.6.3"
hex = "0.4.3"
